--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.12.7",
     "axios": "^0.21.0",
     "babel-loader": "^8.2.2",
+    "faker": "^5.5.3",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
